--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ main {
     height: 500px;
     border-radius: 20px;
     overflow: hidden;
+    transition: ease;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.541);
 }
 
